--- a/section_scikit_docs_textit_As__.tex
+++ b/section_scikit_docs_textit_As__.tex
@@ -7,7 +7,7 @@
 	
 	
 	Hyper-parameters for tree models are in general based on:
-	Max depth. Number of features sampled at each decision node. Bootsrtapped construciton of trees. The split measurement criteria. Leaf size or total nubmer of sample per leaf (note that this is a measure of tree depth).. }
+	Max depth. Number of features sampled at each decision node. Bootsrtapped construciton of trees. The split measurement criteria. Leaf size or total nubmer of sample per leaf (note that this is a measure of tree depth).. 
 	
 	Random Forests' tuning parameteres are the same that those in tree learners. The only difference is in the number of in the total number of tree learners used to build the forest.
 	
