--- a/trash.tex
+++ b/trash.tex
@@ -152,7 +152,7 @@ min_{p,t} \big[ min_{c_{left} }  \sum_{x \in A_{left}(p,t) } L(y,c_{left})      
 
 where $y$ is the target associated to our sample $x$. Note that this can be done efficiently for a wide range of loss functions since the minimization can be done for each feature independently. 
 
-A tree is then grown in an iterative way from the top down \footnote{In this context the \textit{top} of a tree refers to the root of the tree.}, estimating the appropriate parameters at each split. All of the training set's samples would start at the top (the root node) and then travel down through the trees branches, in accordance to their fulfillment or not of each node's split rule. The tree's leafs are the subsets that comprise the partition and for new samples, the prediction of their target class will be the output of traveling the sample down to the leaf node. 
+A tree is then grown in an iterative way from the top down \footnote{In this context the \textit{top} of a tree refers to the root of the tree.}, estimating the appropriate parameters at each split. All of the training set's samples would start at the top (the root node) and then travel down through the trees branches, in accordance to their fulfillment or not of each node's split rule. The tree's leafs are the subsets that comprise the partition and once a learner is fit, predicting targets for new samples is straightforward: the prediction of their target class will be the output of traveling the sample down to the leaf node.  
 
 To illustrate this method, an instance is show in figure \ref{rf-treeFigure}. This classification tree example is built for the two class problem of gender prediction using data from CDRs:
 %[.{\textit{Woman}}]
@@ -171,13 +171,12 @@ To illustrate this method, an instance is show in figure \ref{rf-treeFigure}. Th
 %[.{\textit{M}} ] [.{\textit{F}} ]
 
 
+The metrics used to build each rule score, for the resulting sets, are the \textit{Gini impurity measure} and the \textit{entropy} or \textit{information gain} criterion. The former optimizes for misclassification error in the resulting sets, if all samples were to be tagged with one predicted target-label.  The latter optimizes for information entropy, which is analogous to minimizing \textit{Kullback-Liebler divergence} of the resulting sets with respect to the original set previous to the split. This partitioning of the samples will continue iteratively until a predefined tuning parameter limit will stopthe optimization or iteration.
 
-The latter optimizes for information entropy, which is analogous to minimizing \textit{Kullback-Liebler divergence} of the resulting sets with respect to the original set previous to the split. This partitioning of the samples will continue iteratively until a predefined optimization or iteration threshold is met. And these thresholds will be given as \textit{tuning parameters} of the model.
 
+Hyper-parameters (tuning parameters) of tree models are set set before running the algorithm, also known as tuning parameters. In this algorithm examples of hyper-parameters of the model include the length of the tree,  the splitting rule threshold and the node impurity measures are also parameters of the model. 
 
-In this method hyper-parameters of the model include the length of the tree and the metric used to decide on the \textit{best} split. Parameters are limited to the features selected at each node along with the splitting rule threshold. However, once a learner is fit, predicting targets for new samples is straightforward. 
-
-Hyper-parameters of tree models, also known as tuning parameters, are those parameters need to be set before running the algorithm. From the previous descriptions we can list those directly:
+From the previous algorithm descriptions we can list those directly:
 
 \begin{itemize}
 	\item Max depth of the tree, or the number of allowed level of splits.
@@ -185,6 +184,8 @@ Hyper-parameters of tree models, also known as tuning parameters, are those para
 	\item The leaf size or the total number of minimum samples allowed per leaf. Note that this is a limit imposed on  branch depth. 
 	\item Number of features selected to decide on the best split feature at each node.
 \end{itemize}
+
+
 
 
 
