--- a/Notar_que_todo_lo_que__.tex
+++ b/Notar_que_todo_lo_que__.tex
@@ -1,6 +1,3 @@
-Notar que todo lo que esta en italica es tipo highlighter de textos de otros autores :)
-%NOTAR QUE TO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER DE OTROS TEXTOS DE OTROS AUTORES}
-
 \section{Classifier : Decision Tree Learners}
 
 rview of this supervised learner used in regression and classification problems.
@@ -91,8 +88,8 @@ We will denote the node impurity measure for the classification tree by $Q_j(T)$
 	\item Cross-entropy: $ \displaystyle \sum_{k=1}^{K} -log(\hat{p}_{jk})\hat{p}_{jk} $
 \end{itemize}
 
-The Gini index is also commonly used with a specific loss matrix that assigns different weights to different cases of misclassification. In practical appliclations having a sample from class $k$ incorrectly assigned to class $k'$ might be less importante than the reverse case where a sample from class $k'$ was incorrectly assigned to $k$. To reflect this difference, one can add a weight term to the gini index by considering the loss matrix $L \in \mathcal{R_{\geq 0}}^{k\ x\ k}}$ where $(L)_{(k,k')}$ is the cost of misclassifying a class $k$ sample into $k'$. This matrix in the terms of the gini index will be weighed \hat{p}_{jk} \hat{p}_{jk'}
-This is b
+
+For the Gini index, it is also common to use a reweighted version of the series using a loss matrix that assigns different weights to different cases of misclassification. In practical appliclations having a sample from class $k$ incorrectly assigned to class $k'$ might be less importante than the reverse case where a sample from class $k'$ was incorrectly assigned to $k$. To reflect this difference, one can add a weight term to the gini index by considering the loss matrix $L \in \mathbb R_{\ge 0}^{K \times K}$ where $(L)_{(k,k')}$ is the cost of misclassifying a class $k$ sample into $k'$. Naturally $L$ is a null diagonal matrix.  The Gini index terms then takes the reweighted form  $L_{kk'} \hat{p}_{jk} \hat{p}_{jk'}$.
 
 In the binary (two class) case, if we consider $p$ to be the probability of success, $Q_j(T)$ can be expressed as
 
@@ -111,7 +108,6 @@ C_\alpha(T)  = \sum_{j=1}^{|T|} N_j Q_j(T)  + \alpha|T|
 Here  $\alpha \in \mathbb{R}_{\geq 0}$ is a tuning parameter that weighs between the tree complexity given by its depth and the accuracy of the model as given by the measure we proposed in \ref{decisionTreeCostFunctions}. The idea is that given an $\alpha$ we find the subtree $T_{alpha} \subset T_0$ that minimizes \ref{decisionTreeCostComplexity} using the \textit{weakest link pruning} algorithm which goes as follows:
 
 Let  $B(T)  = \sum_{j} N_j Q_j(T) $ be our pure loss function, without any complexity cost added. \cite{breiman-cart84} shows that we can find $T_{alpha}$ included in a sequence of trees. The sequence is built by iteratively pruning the node $j$ that, when removed from the tree, creates the smalles increase in $B(T)$. In this way, we'll have a sequence of trees $T_0,T_1,...,T_l$ and a sequence of nodes $j_0, j_1,...,j_l$ respectively the ones minimizing the increase in $B(T_0),B(T_1),...,B(T_l)$ at each step. The algorith will stop when have reached the root node and we will find our tree $T_{alpha}$ by comparing all of the $C_\alpha(T)$ for all of the trees in the sequence. In practice, it is common to have this procedure done within a $K$-fold cross validation routine to reach to an estimated $\hat{\alpha}$.
-
 
 For a more complete explanation of a decision tree for classification or regression problems, please refer to \cite{breiman-cart84}.
 
