--- a/trash.tex
+++ b/trash.tex
@@ -217,7 +217,8 @@ We will denote the node impurity measure for the classification tree by $Q_j(T)$
 	\item Cross-entropy: $ \displaystyle \sum_{k=1}^{K} -log(\hat{p}_{jk})\hat{p}_{jk} $
 \end{itemize}
 
-Sometimes the Gini index is used along with a 
+
+For the Gini index, it is also common to use a reweighted version of the series using a loss matrix that assigns different weights to different cases of misclassification. In practical appliclations having a sample from class $k$ incorrectly assigned to class $k'$ might be less importante than the reverse case where a sample from class $k'$ was incorrectly assigned to $k$. To reflect this difference, one can add a weight term to the gini index by considering the loss matrix $L \in \mathbb R_{\ge 0}^{K \times K}$ where $(L)_{(k,k')}$ is the cost of misclassifying a class $k$ sample into $k'$. Naturally $L$ is a null diagonal matrix.  The Gini index terms then takes the reweighted form  $L_{kk'} \hat{p}_{jk} \hat{p}_{jk'}$.
 
 In the binary (two class) case, if we consider $p$ to be the probability of success, $Q_j(T)$ can be expressed as
 
@@ -237,7 +238,6 @@ Here  $\alpha \in \mathbb{R}_{\geq 0}$ is a tuning parameter that weighs between
 
 Let  $B(T)  = \sum_{j} N_j Q_j(T) $ be our pure loss function, without any complexity cost added. \cite{breiman-cart84} shows that we can find $T_{alpha}$ included in a sequence of trees. The sequence is built by iteratively pruning the node $j$ that, when removed from the tree, creates the smalles increase in $B(T)$. In this way, we'll have a sequence of trees $T_0,T_1,...,T_l$ and a sequence of nodes $j_0, j_1,...,j_l$ respectively the ones minimizing the increase in $B(T_0),B(T_1),...,B(T_l)$ at each step. The algorith will stop when have reached the root node and we will find our tree $T_{alpha}$ by comparing all of the $C_\alpha(T)$ for all of the trees in the sequence. In practice, it is common to have this procedure done within a $K$-fold cross validation routine to reach to an estimated $\hat{\alpha}$.
 
-
 For a more complete explanation of a decision tree for classification or regression problems, please refer to \cite{breiman-cart84}.
 
 
@@ -247,7 +247,6 @@ For a more complete explanation of a decision tree for classification or regress
 
 \textit{}
 
-\textit{}
 
 \end{document}
 
